# rust-with-webapp

my-todo/: .gitignore  Cargo.toml  req.http  sample.envrc
my-todo/migrations/: 20230507135558_create_todos_table.up.sql  20230508135308_change_todos_id_columns_unsigned.down.sql  20230508135308_change_todos_id_columns_unsigned.up.sql
my-todo/src/: app.rs  connection_pool.rs  errors.rs  handlers.rs  lib.rs  main.rs  payloads.rs  repositories.rs
my-todo/src/handlers/: todos.rs
my-todo/src/models/: todos.rs
my-todo/src/repositories/: db.rs  in_memory.rs
my-todo/tests/: expected_response_value.rs  test_todo_repository.rs  test_todo_request.rs
my-todo/tests/utilities/: mod.rs  request_builders.rs  response_converters.rs
