[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.*", features = ["macros"] }
hyper = { version = "0.14.*", features = ["full"] }
mime = "0.3.*"
tokio = { version = "1.28.*", features = ["full"] }
tower = "0.4.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
tracing = "0.1.*"
tracing-subscriber = { version = "0.3.*", features = ["env-filter"] }
anyhow = "1.0.*"
thiserror = "1.0.*"
assert2 = "0.3.*"
pretty_assertions = "1.3.*"
validator = { version = "0.16.*", features = ["derive"] }
sqlx = { version = "0.6.*", features = ["runtime-tokio-rustls", "mysql", "macros"] }
